--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,10 @@ language: c++
 compiler:
   - gcc
   - clang
+before_install:
+  - apt-get install python-pip
+install:
+  - pip install requests
 script:
-    - make
+  - make
+  - test/test_routes.py
