--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: c++
 install:
   - export PATH=$HOME/.local/bin:$PATH
-  - sudo pip install requests --user `whoami`
+  - pip install requests --user `whoami`
 script:
   - ./build.sh
   - bin/dorfbook > /dev/null &
